Микросетки на флексах для всех страниц

--- a/catalog.html
+++ b/catalog.html
@@ -29,12 +29,18 @@
           <li class="navigation-item">
             <a class="user-panel-link" href="#">
               <span class="visually-hidden" href="#">Поиск</span>
+              <svg width="18" height="18" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M18.5 17.0083L14.8 13.3287C15.8 12.0359 16.5 10.3453 16.5 8.4558C16.5 4.08011 12.9 0.5 8.5 0.5C4.1 0.5 0.5 4.17956 0.5 8.55525C0.5 12.9309 4.1 16.511 8.5 16.511C10.3 16.511 12 15.9144 13.4 14.8204L17.1 18.5L18.5 17.0083ZM8.5 14.5221C5.2 14.5221 2.5 11.837 2.5 8.55525C2.5 5.27348 5.2 2.5884 8.5 2.5884C11.8 2.5884 14.5 5.27348 14.5 8.55525C14.5 11.837 11.8 14.5221 8.5 14.5221Z" fill="black"/>
+              </svg>
             </a>
           </li>
           <li class="navigation-item">
             <a class="user-panel-link" href="#">
               <span class="visually-hidden">Избранное</span>
-              <span class="counter">12</span>
+              <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.9 17C8.6 17 8.3 16.9 8.1 16.6C2.7 10.5 1.4 9.1 1.1 8.7C0.4 7.8 0 6.6 0 5.4C0 2.4 2.4 0 5.5 0C6.8 0 8 0.5 9 1.3C10 0.5 11.3 0 12.5 0C15.5 0 18 2.4 18 5.4C18 6.7 17.5 7.9 16.7 8.8L9.7 16.7C9.5 16.9 9.3 17 8.9 17ZM2.9 7.5C3.2 7.9 6.4 11.5 9 14.4L15.2 7.4C15.7 6.9 15.9 6.2 15.9 5.4C15.9 3.6 14.4 2.1 12.6 2.1C11.6 2.1 10.6 2.6 9.9 3.4C9.6 3.7 9.3 3.8 9 3.8C8.7 3.8 8.4 3.6 8.2 3.4C7.5 2.6 6.5 2.1 5.5 2.1C3.7 2.1 2.2 3.6 2.2 5.4C2.1 6.3 2.5 7 2.9 7.5C2.8 7.5 2.8 7.5 2.9 7.5Z" fill="black"/>
+              </svg>
+              <!-- <span class="counter">12</span> -->
             </a>
           </li>
           <li class="navigation-item">
@@ -136,172 +142,166 @@
         <section class="search-hotels">
           <h2 class="visually-hidden">Список найденых гостиниц</h2>
 
-          <div class="hotels">
-            <div class="search-container">
-              <b class="search-result">Найдено гостиниц: 38</b>
-                <div class="search-panel-container">
-                  <select class="select-control" aria-label="Сортировка">
-                    <option value="cheap">Сначала дешёвые</option>
-                    <option value="expensive">Сначала дорогие</option>
-                    <option value="popular">Сначала популярные</option>
-                  </select>
-                  <ul class="button-show-list">
-                    <li class="button-show-item show-current">
-                      <a href="#">
-                        <span class="visually-hidden">Показать карточки</span>
-                        <svg class="presentation-icon" width="16" height="14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <path d="M4 0H0v6h4V0ZM16 0h-4v6h4V0ZM10 0H6v6h4V0ZM4 8H0v6h4V8ZM16 8h-4v6h4V8ZM10 8H6v6h4V8Z" fill="#000"/>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="button-show-item">
-                      <a href="#">
-                        <span class="visually-hidden">Показать карточку</span>
-                        <svg width="16" height="14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <path d="M16 12H0v2h16v-2ZM14 2v6H2V2h12Zm2-2H0v10h16V0Z" fill="#000"/>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="button-show-item">
-                      <a href="#">
-                        <span class="visually-hidden">Показать список</span>
-                        <svg width="16" height="14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <path d="M2 0H0v2h2V0ZM16 0H4v2h12V0ZM2 4H0v2h2V4ZM16 4H4v2h12V4ZM2 8H0v2h2V8ZM16 8H4v2h12V8ZM2 12H0v2h2v-2ZM16 12H4v2h12v-2Z" fill="#000"/>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-            </div>
-            <ul class="hotels-list">
-              <li class="hotels-card">
-                <a class="hotels-link" href="#">
-                  <img class="hotels-card-image" src="images/hotels/hotel-1.jpg" alt="Amara Resort & Spa" width="300" height="212">
-                  <h3 class="hotels-card-title">Amara Resort &amp;&nbsp;Spa</h3>
-                </a>
-                <div class="hotels-card-group-price">
-                  <span class="hotels-card-type">Гостиница</span>
-                  <span class="hotels-card-price">От&nbsp;4000&nbsp;₽</span>
-                </div>
-                <div class="hotels-card-group-buttons">
-                  <a class="button button-more" href="#">Подробнее</a>
-                  <button class="button button-favorites" type="button">В&nbsp;избранное</button>
-                </div>
-                <div class="hotels-card-group-rating">
-                  <div class="sstars">
-                    <span class="visually-hidden">4 звезды</span>
-                  </div>
-                  <div class="rating">
-                    <span>Рейтинг: 8,5</span>
-                  </div>
-                </div>
-              </li>
-              <li class="hotels-card">
-                <a class="hotels-link" href="#">
-                  <img class="hotels-card-image" src="images/hotels/hotel-2.jpg" alt="Villas at Poco Diablo" width="300" height="212">
-                  <h3 class="hotels-card-title">Villas at&nbsp;Poco Diablo</h3>
-                </a>
-                <div class="hotels-card-group-price">
-                  <span class="hotels-card-type">Гостиница</span>
-                  <span class="hotels-card-price">От&nbsp;5000&nbsp;₽</span>
-                </div>
-                <div class="hotels-card-group-buttons">
-                  <a class="button button-more" href="#">Подробнее</a>
-                  <button class="button button-favorites" type="button">В&nbsp;избранное</button>
-                </div>
-                <div class="hotels-card-group-rating">
-                  <div class="stars">
-                    <span class="visually-hidden">4 звезды</span>
-                  </div>
-                  <div class="rating">
-                    <span>Рейтинг: 9,2</span>
-                  </div>
-                </div>
-              </li>
-              <li class="hotels-card">
-                <a class="hotels-link" href="#">
-                  <img class="hotels-card-image" src="images/hotels/hotel-3.jpg" alt="Desert Quail Inn" width="300" height="212">
-                  <h3 class="hotels-card-title">Desert Quail Inn</h3>
-                </a>
-                <div class="hotels-card-group-price">
-                  <span class="hotels-card-type">Гостиница</span>
-                  <span class="hotels-card-price">От&nbsp;2500&nbsp;₽</span>
-                </div>
-                <div class="hotels-card-group-buttons">
-                  <a class="button button-more" href="#">Подробнее</a>
-                  <button class="button button-favorites" type="button">В&nbsp;избранное</button>
-                </div>
-                <div class="hotels-card-group-rating">
-                  <div class="stars">
-                    <span class="visually-hidden">3 звезды</span>
-                  </div>
-                  <div class="rating">
-                    <span>Рейтинг: 6,9</span>
-                  </div>
-                </div>
-              </li>
-              <li class="hotels-card">
-                <a class="hotels-link" href="#">
-                  <img class="hotels-card-image" src="images/hotels/hotel-4.jpg" alt="GreenTree Inn" width="300" height="212">
-                  <h3 class="hotels-card-title">GreenTree Inn</h3>
-                </a>
-                <div class="hotels-card-group-price">
-                  <span class="hotels-card-type">Гостиница</span>
-                  <span class="hotels-card-price">От&nbsp;1500&nbsp;₽</span>
-                </div>
-                <div class="hotels-card-group-buttons">
-                  <a class="button button-more" href="#">Подробнее</a>
-                  <button class="button button-favorites" type="button">В&nbsp;избранное</button>
-                </div>
-                <div class="hotels-card-group-rating">
-                  <div class="stars">
-                    <span class="visually-hidden">2 звезды</span>
-                  </div>
-                  <div class="rating">
-                    <span>Рейтинг: 5,0</span>
-                  </div>
-                </div>
-              </li>
-            </ul>
-            <ul class="pagination">
-              <li class="pagination-item pagination-current">
-                <a class="pagination-link pagination-current" href="#">
-                  <span class="pagination-number">1</span>
-                </a>
-              </li>
-              <li class="pagination-item">
-                <a class="pagination-link" href="#">
-                  <span class="pagination-number">2</span>
-                </a>
-              </li>
-              <li class="pagination-item">
-                <a class="pagination-link" href="#">
-                  <span class="pagination-number">3</span>
-                </a>
-              </li>
-              <li class="pagination-item">
-                <a class="pagination-link" href="#">
-                  <span class="pagination-number">4</span>
-                </a>
-              </li>
-              <li class="pagination-item pagination-dots">
-                <a class="pagination-link pagination-dots" href="#">
-                  <span class="pagination-number">...</span>
-                </a>
-              </li>
-              <li class="pagination-item">
-                <a class="pagination-link" href="#">
-                  <span class="pagination-number">5</span>
-                </a>
-              </li>
-            </ul>
+          <div class="search-container">
+            <b class="search-result">Найдено гостиниц: 38</b>
+              <select class="select-control" aria-label="Сортировка">
+                <option value="cheap">Сначала дешёвые</option>
+                <option value="expensive">Сначала дорогие</option>
+                <option value="popular">Сначала популярные</option>
+              </select>
+              <ul class="button-show-list reset-list">
+                <li class="button-show-item">
+                  <a class="button-show-link" href="#">
+                    <span class="visually-hidden">Показать карточки</span>
+                    <svg class="presentation-icon" width="16" height="14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M4 0H0v6h4V0ZM16 0h-4v6h4V0ZM10 0H6v6h4V0ZM4 8H0v6h4V8ZM16 8h-4v6h4V8ZM10 8H6v6h4V8Z" fill="#000"/>
+                    </svg>
+                  </a>
+                </li>
+                <li class="button-show-item">
+                  <a class="button-show-link" href="#">
+                    <span class="visually-hidden">Показать карточку</span>
+                    <svg width="16" height="14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M16 12H0v2h16v-2ZM14 2v6H2V2h12Zm2-2H0v10h16V0Z" fill="#000"/>
+                    </svg>
+                  </a>
+                </li>
+                <li class="button-show-item">
+                  <a class="button-show-link" href="#">
+                    <span class="visually-hidden">Показать список</span>
+                    <svg width="16" height="14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M2 0H0v2h2V0ZM16 0H4v2h12V0ZM2 4H0v2h2V4ZM16 4H4v2h12V4ZM2 8H0v2h2V8ZM16 8H4v2h12V8ZM2 12H0v2h2v-2ZM16 12H4v2h12v-2Z" fill="#000"/>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
           </div>
+          <ul class="hotels-list reset-list">
+            <li class="hotels-card">
+              <a class="hotels-link" href="#">
+                <img class="hotels-card-image" src="images/hotels/hotel-1.jpg" alt="Amara Resort & Spa" width="300" height="212">
+                <h3 class="hotels-card-title">Amara Resort &amp;&nbsp;Spa</h3>
+              </a>
+              <div class="hotels-card-group group-price">
+                <span class="hotels-card-type">Гостиница</span>
+                <span class="hotels-card-price">От&nbsp;4000&nbsp;₽</span>
+              </div>
+              <div class="hotels-card-group">
+                <a class="button" href="#">Подробнее</a>
+                <button class="button button-blue" type="button">В&nbsp;избранное</button>
+              </div>
+              <div class="hotels-card-group">
+                <div class="four-stars">
+                  <span class="visually-hidden">4 звезды</span>
+                </div>
+                <div class="rating">
+                  <span>Рейтинг: 8,5</span>
+                </div>
+              </div>
+            </li>
+            <li class="hotels-card">
+              <a class="hotels-link" href="#">
+                <img class="hotels-card-image" src="images/hotels/hotel-2.jpg" alt="Villas at Poco Diablo" width="300" height="212">
+                <h3 class="hotels-card-title">Villas at&nbsp;Poco Diablo</h3>
+              </a>
+              <div class="hotels-card-group group-price">
+                <span class="hotels-card-type">Гостиница</span>
+                <span class="hotels-card-price">От&nbsp;5000&nbsp;₽</span>
+              </div>
+              <div class="hotels-card-group group-price">
+                <a class="button" href="#">Подробнее</a>
+                <button class="button button-blue" type="button">В&nbsp;избранное</button>
+              </div>
+              <div class="hotels-card-group">
+                <div class="four-stars">
+                  <span class="visually-hidden">4 звезды</span>
+                </div>
+                <div class="rating">
+                  <span>Рейтинг: 9,2</span>
+                </div>
+              </div>
+            </li>
+            <li class="hotels-card">
+              <a class="hotels-link" href="#">
+                <img class="hotels-card-image" src="images/hotels/hotel-3.jpg" alt="Desert Quail Inn" width="300" height="212">
+                <h3 class="hotels-card-title">Desert Quail Inn</h3>
+              </a>
+              <div class="hotels-card-group group-price">
+                <span class="hotels-card-type">Гостиница</span>
+                <span class="hotels-card-price">От&nbsp;2500&nbsp;₽</span>
+              </div>
+              <div class="hotels-card-group">
+                <a class="button" href="#">Подробнее</a>
+                <button class="button button-blue" type="button">В&nbsp;избранное</button>
+              </div>
+              <div class="hotels-card-group">
+                <div class="three-stars">
+                  <span class="visually-hidden">3 звезды</span>
+                </div>
+                <div class="rating">
+                  <span>Рейтинг: 6,9</span>
+                </div>
+              </div>
+            </li>
+            <li class="hotels-card">
+              <a class="hotels-link" href="#">
+                <img class="hotels-card-image" src="images/hotels/hotel-4.jpg" alt="GreenTree Inn" width="300" height="212">
+                <h3 class="hotels-card-title">GreenTree Inn</h3>
+              </a>
+              <div class="hotels-card-group group-price">
+                <span class="hotels-card-type">Гостиница</span>
+                <span class="hotels-card-price">От&nbsp;1500&nbsp;₽</span>
+              </div>
+              <div class="hotels-card-group">
+                <a class="button" href="#">Подробнее</a>
+                <button class="button button-blue" type="button">В&nbsp;избранное</button>
+              </div>
+              <div class="hotels-card-group">
+                <div class="two-stars">
+                  <span class="visually-hidden">2 звезды</span>
+                </div>
+                <div class="rating">
+                  <span>Рейтинг: 5,0</span>
+                </div>
+              </div>
+            </li>
+          </ul>
+          <ul class="pagination reset-list">
+            <li class="pagination-item">
+              <a class="pagination-link pagination-current" href="#">
+                <span class="pagination-number">1</span>
+              </a>
+            </li>
+            <li class="pagination-item">
+              <a class="pagination-link" href="#">
+                <span class="pagination-number">2</span>
+              </a>
+            </li>
+            <li class="pagination-item">
+              <a class="pagination-link" href="#">
+                <span class="pagination-number">3</span>
+              </a>
+            </li>
+            <li class="pagination-item">
+              <a class="pagination-link" href="#">
+                <span class="pagination-number">4</span>
+              </a>
+            </li>
+            <li class="pagination-item pagination-dots">
+              <a class="pagination-link pagination-dots" href="#">
+                <span class="pagination-number">...</span>
+              </a>
+            </li>
+            <li class="pagination-item">
+              <a class="pagination-link" href="#">
+                <span class="pagination-number">5</span>
+              </a>
+            </li>
+          </ul>
         </section>
         <section class="subscribe">
-          <div class="subscribe-text-container">
-            <h2 class="subscribe-title black-text">Подпишитесь на&nbsp;рассылку</h2>
-            <p class="subscribe-description  black-text">Только полезная информация и&nbsp;никакого спама, честное бойскаутское!</p>
-          </div>
+          <h2 class="subscribe-title black-text">Подпишитесь на&nbsp;рассылку</h2>
+          <p class="subscribe-description  black-text">Только полезная информация и&nbsp;никакого спама, честное бойскаутское!</p>
           <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
             <input class="subscribe-field" placeholder="Ваш e-mail" type="email" name="subscribe-field-email" id="subscribe-field-email">
             <button class="button subscribe-button" type="submit">Подписаться</button>
@@ -313,7 +313,7 @@
         <h2 class="visually-hidden">Контактная информация</h2>
           <section class="footer-social">
             <h2 class="visually-hidden">Социальные сети</h2>
-            <ul class="footer-social-list">
+            <ul class="footer-social-list reset-list">
               <li class="footer-social-item">
                 <a class="button social-button" href="https://vk.com/htmlacademy">
                   <span class="visually-hidden">ВКонтакте</span>
