--- a/index.html
+++ b/index.html
@@ -29,12 +29,18 @@
             <li class="navigation-item">
               <a class="user-panel-link" href="#">
                 <span class="visually-hidden" href="#">Поиск</span>
+                <svg width="18" height="18" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M18.5 17.0083L14.8 13.3287C15.8 12.0359 16.5 10.3453 16.5 8.4558C16.5 4.08011 12.9 0.5 8.5 0.5C4.1 0.5 0.5 4.17956 0.5 8.55525C0.5 12.9309 4.1 16.511 8.5 16.511C10.3 16.511 12 15.9144 13.4 14.8204L17.1 18.5L18.5 17.0083ZM8.5 14.5221C5.2 14.5221 2.5 11.837 2.5 8.55525C2.5 5.27348 5.2 2.5884 8.5 2.5884C11.8 2.5884 14.5 5.27348 14.5 8.55525C14.5 11.837 11.8 14.5221 8.5 14.5221Z" fill="black"/>
+                </svg>
               </a>
             </li>
             <li class="navigation-item">
               <a class="user-panel-link" href="#">
                 <span class="visually-hidden">Избранное</span>
-                <span class="counter">12</span>
+                <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M8.9 17C8.6 17 8.3 16.9 8.1 16.6C2.7 10.5 1.4 9.1 1.1 8.7C0.4 7.8 0 6.6 0 5.4C0 2.4 2.4 0 5.5 0C6.8 0 8 0.5 9 1.3C10 0.5 11.3 0 12.5 0C15.5 0 18 2.4 18 5.4C18 6.7 17.5 7.9 16.7 8.8L9.7 16.7C9.5 16.9 9.3 17 8.9 17ZM2.9 7.5C3.2 7.9 6.4 11.5 9 14.4L15.2 7.4C15.7 6.9 15.9 6.2 15.9 5.4C15.9 3.6 14.4 2.1 12.6 2.1C11.6 2.1 10.6 2.6 9.9 3.4C9.6 3.7 9.3 3.8 9 3.8C8.7 3.8 8.4 3.6 8.2 3.4C7.5 2.6 6.5 2.1 5.5 2.1C3.7 2.1 2.2 3.6 2.2 5.4C2.1 6.3 2.5 7 2.9 7.5C2.8 7.5 2.8 7.5 2.9 7.5Z" fill="black"/>
+                </svg>
+                <!-- <span class="counter">12</span> -->
               </a>
             </li>
             <li class="navigation-item">
@@ -59,78 +65,58 @@
             <p class="description-compare">Рассмотрим причины, по&nbsp;которым Седона круче, чем Гранд-Каньон!</p>
           </div>
           <h2 class="visually-hidden">Приимущесва</h2>
-          <ul class="advantages-list">
+          <ul class="advantages-list reset-list">
             <li class="advantages-item-picture">
               <div class="advantages-item">
-                <div class="text-container">
-                  <h3 class="advantages-title">Настоящий городок</h3>
-                  <p class="advantages-description">Седона&nbsp;&mdash; не&nbsp;аттракцион для туристов, там течёт своя жизнь</p>
-                </div>
+                <h3 class="advantages-title">Настоящий<br> городок</h3>
+                <p class="advantages-description">Седона&nbsp;&mdash; не&nbsp;аттракцион для<br> туристов, там течёт своя<br> жизнь</p>
               </div>
-              <img class="advantages-image" src="images/town-sedona.jpg" alt="Дома Седоны вместе с растительностью на фоне гор" width="800" height="384">
+              <img class="advantages-image" src="images/town-sedona.jpg" alt="Дома Седоны вместе с растительностью на фоне гор">
             </li>
             <li class="advantages-item">
-              <div class="text-container">
-                <h3 class="advantages-title">Небольшая площадь</h3>
-                <p class="advantages-description">Все достопримечательности находятся очень близко</p>
-              </div>
+              <h3 class="advantages-title">Небольшая<br> площадь</h3>
+              <p class="advantages-description">Все достопримечательности<br> находятся очень близко</p>
             </li>
             <li class="advantages-item light-blue">
-              <div class="text-container">
-                <h3 class="advantages-title">Красивая дорога</h3>
-                <p class="advantages-description">Ехать в&nbsp;Седону из&nbsp;Лас-Вегаса совсем не&nbsp;скучно!</p>
-              </div>
+              <h3 class="advantages-title">Красивая<br> дорога</h3>
+              <p class="advantages-description">Ехать в&nbsp;Седону из&nbsp;Лас-Вегаса<br> совсем не&nbsp;скучно!</p>
             </li>
             <li class="advantages-item">
-              <div class="text-container">
-                <h3 class="advantages-title">Мало туристов</h3>
-                <p class="advantages-description">Большинство едет в&nbsp;Гранд Каньон и&nbsp;толпится там</p>
-              </div>
+              <h3 class="advantages-title">Мало<br> туристов</h3>
+              <p class="advantages-description">Большинство едет в&nbsp;Гранд<br> Каньон и&nbsp;толпится там</p>
             </li>
             <li class="advantages-item-picture">
-              <img class="advantages-image" src="images/devils-bridge.jpg" alt="Каменный мост между каньонами - Мост дьявола" width="800" height="384">
+              <img class="advantages-image" src="images/devils-bridge.jpg" alt="Каменный мост между каньонами - Мост дьявола">
               <div class="advantages-item">
-                <div class="text-container">
-                  <h3 class="advantages-title">Там есть мост дьявола</h3>
-                  <p class="advantages-description">Да, по&nbsp;нему можно пройти! Если вы&nbsp;осмелитесь, разумеется</p>
-                </div>
+                <h3 class="advantages-title">Там есть<br> мост дьявола</h3>
+                <p class="advantages-description">Да, по&nbsp;нему можно пройти!<br> Если вы&nbsp;осмелитесь,<br> разумеется</p>
               </div>
             </li>
             <li class="advantages-item">
-              <div class="text-container">
-                <h3 class="advantages-title">Жильё</h3>
-                <p class="advantages-description">Рекомендуем пожитьв настоящем мотеле, всё как в&nbsp;кино!</p>
-              </div>
+              <h3 class="advantages-title">Жильё</h3>
+              <p class="advantages-description">Рекомендуем пожить<br> в настоящем мотеле,<br> всё как в&nbsp;кино!</p>
             </li>
             <li class="advantages-item white">
-              <div class="text-container">
-                <h3 class="advantages-title">Еда</h3>
-                <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
-              </div>
+              <h3 class="advantages-title">Еда</h3>
+              <p class="advantages-description">Всегда заказывайте<br> топовый фирменный бургер,<br> вы&nbsp;не&nbsp;разочаруетесь!</p>
             </li>
             <li class="advantages-item">
-              <div class="text-container">
-                <h3 class="advantages-title">Сувениры</h3>
-                <p class="advantages-description">Не&nbsp;только китайского, но&nbsp;и&nbsp;настоящего местного производства!</p>
-              </div>
+              <h3 class="advantages-title">Сувениры</h3>
+              <p class="advantages-description">Не&nbsp;только китайского,<br> но&nbsp;и&nbsp;настоящего местного<br> производства!</p>
             </li>
           </ul>
         </section>
 
         <section class="search">
-          <div class="index-search-container">
-            <h2 class="search-title">Заинтересовались?</h2>
-            <p class="search-description">Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Седоне</p>
-            <a class="button search-button" href="#">Поиск гостиницы в&nbsp;седоне</a>
-          </div>
+          <h2 class="search-title">Заинтересовались?</h2>
+          <p class="search-description">Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам<br> лучшие предложения гостиниц в&nbsp;Седоне</p>
+          <a class="button search-button" href="#">Поиск гостиницы в&nbsp;седоне</a>
         </section>
 
         <section class="subscribe">
           <div class="subscribe-background">
-            <div class="subscribe-text-container">
-              <h2 class="subscribe-title">Подпишитесь на&nbsp;рассылку</h2>
-              <p class="subscribe-description">Только полезная информация и&nbsp;никакого спама, честное бойскаутское!</p>
-            </div>
+            <h2 class="subscribe-title">Подпишитесь на&nbsp;рассылку</h2>
+            <p class="subscribe-description">Только полезная информация и&nbsp;никакого спама,<br> честное бойскаутское!</p>
             <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
               <input class="subscribe-field" placeholder="Ваш e-mail" type="email" name="subscribe-field-email" id="subscribe-field-email">
               <button class="button subscribe-button" type="submit">Подписаться</button>
@@ -143,7 +129,7 @@
         <h2 class="visually-hidden">Контактная информация</h2>
           <section class="footer-social">
             <h2 class="visually-hidden">Социальные сети</h2>
-            <ul class="footer-social-list">
+            <ul class="footer-social-list reset-list">
               <li class="footer-social-item">
                 <a class="button social-button" href="https://vk.com/htmlacademy">
                   <span class="visually-hidden">ВКонтакте</span>
@@ -153,7 +139,7 @@
                 </a>
               </li>
               <li class="footer-social-item">
-                <a class="button social-button" href="https://vk.com/htmlacademy">
+                <a class="button social-button" href="https://t.me/htmlacademy">
                   <span class="visually-hidden">Телеграм</span>
                   <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M16.785 0.955705L0.840489 7.1042C-0.247661 7.54126 -0.241365 8.14828 0.640845 8.41897L4.73445 9.69597L14.2058 3.72014C14.6537 3.44766 15.0629 3.59424 14.7265 3.89281L7.05283 10.8183H7.05103L7.05283 10.8192L6.77045 15.0387C7.18413 15.0387 7.36669 14.8489 7.59871 14.625L9.58705 12.6915L13.7229 15.7464C14.4855 16.1664 15.0332 15.9506 15.2229 15.0405L17.9379 2.2453C18.2158 1.13107 17.5126 0.626562 16.785 0.955705Z" fill="#83B3D3"/>
@@ -161,7 +147,7 @@
                 </a>
               </li>
               <li class="footer-social-item">
-                <a class="button social-button" href="https://vk.com/htmlacademy">
+                <a class="button social-button" href="https://www.youtube.com/user/htmlacademyru">
                   <span class="visually-hidden">Ютуб</span>
                   <svg width="23" height="18" viewBox="0 0 23 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M18.9402 0.356445H3.50738C1.64668 0.356445 0.333252 1.9502 0.333252 3.75645V13.8502C0.333252 15.7627 1.64668 17.3564 3.50738 17.3564H19.1591C20.8009 17.3564 22.3333 15.7627 22.3333 13.9564V3.75645C22.1143 1.9502 20.8009 0.356445 18.9402 0.356445ZM7.99494 12.8939V4.81894L15.3283 8.85645L7.99494 12.8939Z" fill="#83B3D3"/>
