--- a/catalog.html
+++ b/catalog.html
@@ -29,7 +29,7 @@
           <li class="navigation-item">
             <a class="user-panel-link" href="#">
               <span class="visually-hidden">Поиск</span>
-              <svg width="18" height="18" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg aria-hidden="true" focusable="false" width="18" height="18" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M18.5 17.0083L14.8 13.3287C15.8 12.0359 16.5 10.3453 16.5 8.4558C16.5 4.08011 12.9 0.5 8.5 0.5C4.1 0.5 0.5 4.17956 0.5 8.55525C0.5 12.9309 4.1 16.511 8.5 16.511C10.3 16.511 12 15.9144 13.4 14.8204L17.1 18.5L18.5 17.0083ZM8.5 14.5221C5.2 14.5221 2.5 11.837 2.5 8.55525C2.5 5.27348 5.2 2.5884 8.5 2.5884C11.8 2.5884 14.5 5.27348 14.5 8.55525C14.5 11.837 11.8 14.5221 8.5 14.5221Z" fill="black"/>
               </svg>
             </a>
@@ -37,14 +37,14 @@
           <li class="navigation-item">
             <a class="user-panel-link" href="#">
               <span class="visually-hidden">Избранное</span>
-              <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M8.9 17C8.6 17 8.3 16.9 8.1 16.6C2.7 10.5 1.4 9.1 1.1 8.7C0.4 7.8 0 6.6 0 5.4C0 2.4 2.4 0 5.5 0C6.8 0 8 0.5 9 1.3C10 0.5 11.3 0 12.5 0C15.5 0 18 2.4 18 5.4C18 6.7 17.5 7.9 16.7 8.8L9.7 16.7C9.5 16.9 9.3 17 8.9 17ZM2.9 7.5C3.2 7.9 6.4 11.5 9 14.4L15.2 7.4C15.7 6.9 15.9 6.2 15.9 5.4C15.9 3.6 14.4 2.1 12.6 2.1C11.6 2.1 10.6 2.6 9.9 3.4C9.6 3.7 9.3 3.8 9 3.8C8.7 3.8 8.4 3.6 8.2 3.4C7.5 2.6 6.5 2.1 5.5 2.1C3.7 2.1 2.2 3.6 2.2 5.4C2.1 6.3 2.5 7 2.9 7.5C2.8 7.5 2.8 7.5 2.9 7.5Z" fill="black"/>
               </svg>
               <span class="counter">12</span>
             </a>
           </li>
           <li class="navigation-item">
-            <button class="button navigation-button" type="button">Хочу сюда!</button>
+            <button class="button-brown navigation-button" type="button">Хочу сюда!</button>
           </li>
         </ul>
       </header>
@@ -57,7 +57,7 @@
               <h2 class="inner-header-title">Гостиницы Седоны</h2>
               <ul class="breadcrumbs reset-list">
                 <li class="breadcrumbs-item">
-                  <a class="breadcrumbs-link-icon" href="index.html">
+                  <a class="breadcrumbs-link breadcrumbs-link-icon" href="index.html">
                     <span class="visually-hidden">Главная</span>
                     <svg class="arrow-icon" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="13" height="13">
                       <path d="m6.37.5-6 5.8v6.2h12V6.3l-6-5.8Zm5 11h-10V6.7l5-4.8 5 4.8v4.8Z"/>
@@ -78,20 +78,23 @@
                     <ul class="filter-hotels-list reset-list">
                       <li class="filter-hotels-item">
                         <label class="control">
-                          <input class="control-input" type="checkbox" name="swimming-pool" checked>
-                          Бассейн
+                          <input class="visually-hidden control-input" type="checkbox" name="swimming-pool" checked>
+                          <span class="control-mark"></span>
+                          <span class="control-label">Бассейн</span>
                         </label>
                       </li>
                       <li class="filter-hotels-item">
                         <label class="control">
-                          <input class="control-input" type="checkbox" name="parking" checked>
-                          Парковка
+                          <input class="visually-hidden control-input" type="checkbox" name="parking" checked>
+                          <span class="control-mark"></span>
+                          <span class="control-label">Парковка</span>
                         </label>
                       </li>
                       <li class="filter-hotels-item">
                         <label class="control">
-                          <input class="control-input" type="checkbox" name="wi-fi">
-                          Wi-FI
+                          <input class="visually-hidden control-input" type="checkbox" name="wi-fi">
+                          <span class="control-mark"></span>
+                          <span class="control-label">Wi-FI</span>
                         </label>
                       </li>
                     </ul>
@@ -101,20 +104,23 @@
                     <ul class="filter-hotels-list reset-list">
                       <li class="filter-hotels-item">
                         <label class="control">
-                          <input class="control-input" type="radio" name="type-group" checked>
-                          Гостиница
+                          <input class="visually-hidden control-input" type="radio" name="type-group" checked>
+                          <span class="control-mark"></span>
+                          <span class="control-label">Гостиница</span>
                         </label>
                       </li>
                       <li class="filter-hotels-item">
                         <label class="control">
-                          <input class="control-input" type="radio" name="type-group">
-                          Мотель
+                          <input class="visually-hidden control-input" type="radio" name="type-group">
+                          <span class="control-mark"></span>
+                          <span class="control-label">Мотель</span>
                         </label>
                       </li>
                       <li class="filter-hotels-item">
                         <label class="control">
-                          <input class="control-input" type="radio" name="type-group">
-                          Апартаменты
+                          <input class="visually-hidden control-input" type="radio" name="type-group">
+                          <span class="control-mark"></span>
+                          <span class="control-label">Апартаменты</span>
                         </label>
                       </li>
                     </ul>
@@ -123,18 +129,31 @@
               <div class="filter-container-right">
                 <fieldset class="filter-hotels-price reset-fieldset ">
                   <legend class="filter-hotels-title">Стоимость, ₽:</legend>
-                    <ul class="filter-hotels-list reset-list">
-                      <li class="filter-hotels-item group-cost">
-                          <input class="field-cost" type="number" name="field-from">
-                          <input class="field-cost" type="number" name="field-before">
+                    <ul class="range-list reset-list">
+                      <li class="range-inputs">
+                        <div class="cost-container">
+                          <label class="label-cost label-cost-min" for="cost-min">от</label>
+                          <input class="field-cost field-cost-min" id="cost-min" type="number" name="field-from" value="0">
+                        </div>
+                        <div class="cost-container">
+                          <label class="label-cost label-cost-max" for="cost-max">до</label>
+                          <input class="field-cost field-cost-max" id="cost-max" type="number" name="field-before" value="9000">
+                        </div>
                       </li>
-                      <li class="filter-hotels-item">
-                        <span>Регулятор</span>
+                      <li class="range-scale">
+                        <div class="range-bar" style="left: 0; width: 226px;">
+                          <button class="range-toggle toggle-min" type="button">
+                            <span class="visually-hidden">Изменить минимальную цену.</span>
+                          </button>
+                          <button class="range-toggle toggle-max"  type="button">
+                            <span class="visually-hidden">Изменить максимальную цену.</span>
+                          </button>
+                        </div>
                       </li>
                     </ul>
                 </fieldset>
                 <div class="filter-buttons-container">
-                  <button class="button button-apply" type="submit">Применить</button>
+                  <button class="button-blue button-apply" type="submit">Применить</button>
                   <button class="button button-reset" type="submit">Сбросить</button>
                 </div>
               </div>
@@ -191,8 +210,8 @@
               </a>
               <span class="hotels-card-type group-price">Гостиница</span>
               <span class="hotels-card-price group-price">От&nbsp;4000&nbsp;₽</span>
-              <a class="button button-more" href="#">Подробнее</a>
-              <button class="button button-favorites" type="button">В&nbsp;избранное</button>
+              <a class="button-brown" href="#">Подробнее</a>
+              <button class="button-blue" type="button">В&nbsp;избранное</button>
               <div class="four-stars stars-size">
                 <span class="visually-hidden">4 звезды</span>
               </div>
@@ -207,8 +226,8 @@
               </a>
               <span class="hotels-card-type group-price">Гостиница</span>
               <span class="hotels-card-price group-price">От&nbsp;5000&nbsp;₽</span>
-              <a class="button button-more" href="#">Подробнее</a>
-              <button class="button button-favorites" type="button">В&nbsp;избранное</button>
+              <a class="button-brown" href="#">Подробнее</a>
+              <button class="button-blue button-in-favorites" type="button">В&nbsp;избранном</button>
               <div class="four-stars">
                 <span class="visually-hidden">4 звезды</span>
               </div>
@@ -223,8 +242,8 @@
               </a>
               <span class="hotels-card-type group-price">Гостиница</span>
               <span class="hotels-card-price group-price">От&nbsp;2500&nbsp;₽</span>
-              <a class="button button-more" href="#">Подробнее</a>
-              <button class="button button-favorites" type="button">В&nbsp;избранное</button>
+              <a class="button-brown" href="#">Подробнее</a>
+              <button class="button-blue" type="button">В&nbsp;избранное</button>
               <div class="three-stars">
                 <span class="visually-hidden">3 звезды</span>
               </div>
@@ -239,8 +258,8 @@
               </a>
               <span class="hotels-card-type group-price">Гостиница</span>
               <span class="hotels-card-price group-price">От&nbsp;1500&nbsp;₽</span>
-              <a class="button button-more" href="#">Подробнее</a>
-              <button class="button button-favorites" type="button">В&nbsp;избранное</button>
+              <a class="button-brown" href="#">Подробнее</a>
+              <button class="button-blue" type="button">В&nbsp;избранное</button>
               <div class="two-stars">
                 <span class="visually-hidden">2 звезды</span>
               </div>
@@ -285,7 +304,7 @@
           <p class="subscribe-description  black-text">Только полезная информация и&nbsp;никакого спама,<br> честное бойскаутское!</p>
           <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
             <input class="subscribe-field" placeholder="Ваш e-mail" type="email" name="subscribe-field-email" id="subscribe-field-email">
-            <button class="button subscribe-button" type="submit">Подписаться</button>
+            <button class="button-blue subscribe-button" type="submit">Подписаться</button>
           </form>
         </section>
       </main>
