--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <button class="button navigation-button" type="button">Хочу сюда!</button>
+            <button class="button-brown navigation-button" type="button">Хочу сюда!</button>
           </li>
         </ul>
       </header>
@@ -109,8 +109,8 @@
 
         <section class="search">
           <h2 class="search-title">Заинтересовались?</h2>
-          <p class="search-description">Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам<br> лучшие предложения гостиниц в&nbsp;Седоне</p>
-          <a class="button search-button" href="#">Поиск гостиницы в&nbsp;седоне</a>
+          <p class="search-description">Укажите предполагаемые даты поездки,<br> и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Седоне</p>
+          <a class="button-brown search-button" href="#">Поиск гостиницы в&nbsp;седоне</a>
         </section>
 
         <section class="subscribe">
@@ -119,7 +119,7 @@
             <p class="subscribe-description">Только полезная информация и&nbsp;никакого спама,<br> честное бойскаутское!</p>
             <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
               <input class="subscribe-field" placeholder="Ваш e-mail" type="email" name="subscribe-field-email" id="subscribe-field-email">
-              <button class="button subscribe-button" type="submit">Подписаться</button>
+              <button class="button-blue subscribe-button" type="submit">Подписаться</button>
             </form>
           </div>
         </section>
@@ -171,6 +171,82 @@
               </a>
           </section>
       </footer>
+
+      <div class="modal-container ">
+        <div class="modal modal-search">
+          <button class="modal-close-button" type="button">
+            <span class="visually-hidden">Закрыть форму для посика гостиницы.</span>
+          </button>
+          <section class="modal-search-content">
+            <h2 class="modal-search-title">Поиск гостиницы в&nbsp;Седоне</h2>
+            <div class="field-date-container">
+              <p class="field-group">
+                <label class="field-label" for="arrival-date">Дата заезда:</label>
+                <input class="field-input field-input-date" type="text" id="arrival-date" name="input-arrival-date" value="27 апреля 2020" placeholder="Укажите дату">
+              </p>
+              <span class="field-input-message error-message">Мы&nbsp;не&nbsp;можем отправить вас в&nbsp;прошлое.</span>
+            </div>
+            <div class="field-date-container">
+              <p class="field-group">
+                <label class="field-label" for="departure-date">Дата выезда:</label>
+                <input class="field-input field-input-date" type="text" id="departure-date" name="input-departure-date" value="1 сентября 2021" placeholder="Укажите дату">
+              </p>
+              <span class="field-input-message info-message">На&nbsp;эти даты есть свободные номера. Пока есть.</span>
+            </div>
+            <div class="count-people-container">
+              <p class="field-group">
+                <label class="field-label" for="adult-counter">Взрослые:</label>
+                <span class="field-box">
+                  <button class="field-button minus" type="button">
+                    <span class="visually-hidden">Уменьшить количество взрослых.</span>
+                    <svg class="button-icon" width="14" height="2" viewBox="0 0 14 2"  xmlns="http://www.w3.org/2000/svg">
+                      <path d="M0 0L0 2L14 2V0L0 0Z"/>
+                    </svg>
+                  </button>
+                  <input class="field-input field-input-count-people" type="number" id="adult-counter" name="input-adult-counter" value="2">
+                  <button class="field-button plus" type="button">
+                    <span class="visually-hidden">Увеличить количество взрослых.</span>
+                    <svg class="button-icon" width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z"/>
+                    </svg>
+                  </button>
+                </span>
+              </p>
+              <p class="field-group">
+                <span class="field-label">
+                  <label class="field-label" for="counter-kids">Дети:</label>
+                  <span class="tooltip">
+                      <button class="tooltip-toggle button-blue" type="button" aria-labelledby="tooltip-label-date">
+                        <svg class="tooltip-icon" width="2" height="12" viewBox="0 0 2 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path fill-rule="evenodd" clip-rule="evenodd" d="M0 0H2V2H0V0ZM2 12H0V3H2V12Z" fill="white"/>
+                        </svg>
+                      </button>
+                      <span class="tooltip-text"  role="tooltip" id="tooltip-label-date">
+                        Укажите количество детей, которые будут с&nbsp;вами, возраст которых от&nbsp;6&nbsp;до&nbsp;18&nbsp;лет. Дети до&nbsp;6&nbsp;лет размещаются бесплатн
+                      </span>
+                  </span>
+                </span>
+                <span class="field-box">
+                  <button class="field-button minus" type="button">
+                    <span class="visually-hidden">Уменьшить количество детей.</span>
+                    <svg class="button-icon" width="14" height="2" viewBox="0 0 14 2"  xmlns="http://www.w3.org/2000/svg">
+                      <path d="M0 0L0 2L14 2V0L0 0Z"/>
+                    </svg>
+                  </button>
+                  <input class="field-input field-input-count-people" type="number" id="counter-kids" name="input-counter-kids" value="2">
+                  <button class="field-button plus" type="button">
+                    <span class="visually-hidden">Увеличить количество детей.</span>
+                    <svg class="button-icon" width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z"/>
+                    </svg>
+                  </button>
+                </span>
+              </p>
+            </div>
+            <a class="button-blue modal-search-button" href="#">Найти</a>
+        </section>
+        </div>
+      </div>
     </div>
   </body>
 </html>
