--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Гостиницы</title>
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
@@ -13,20 +14,20 @@
             <img class="page-header-logo" src="images/logo-sedona.svg" alt="Каньон с голубым небом и облаками." width="140" height="70">
           </a>
           <ul class="navigation-list reset-list">
-            <li class="navigation-item">
+            <li>
               <a class="navigation-link" href="index.html">Главная</a>
             </li>
-            <li class="navigation-item">
+            <li>
               <a class="navigation-link" href="#">О седоне</a>
             </li>
-            <li class="navigation-item">
+            <li>
               <a class="navigation-link navigation-link-current" href="#">Гостиницы</a>
             </li>
           </ul>
         </nav>
 
         <ul class="user-panel reset-list">
-          <li class="navigation-item">
+          <li>
             <a class="user-panel-link" href="#">
               <span class="visually-hidden">Поиск.</span>
               <svg aria-hidden="true" focusable="false" width="18" height="18" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -34,7 +35,7 @@
               </svg>
             </a>
           </li>
-          <li class="navigation-item">
+          <li>
             <a class="user-panel-link" href="#">
               <span class="visually-hidden">Избранное.</span>
               <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -43,13 +44,13 @@
               <span class="counter">12</span>
             </a>
           </li>
-          <li class="navigation-item">
+          <li>
             <button class="button-brown navigation-button" type="button">Хочу сюда!</button>
           </li>
         </ul>
       </header>
 
-      <main class="main-container main-inner">
+      <main class="main-container">
         <h1 class="visually-hidden">Гостиницы Седоны.</h1>
         <div class="filter-background">
           <div class="filter-container">
@@ -166,10 +167,10 @@
 
           <div class="search-container">
             <b class="search-result">Найдено гостиниц:
-              <span class="search-count">38</span>
+              <span class="search-count-hotels">38</span>
             </b>
-              <select class="select-control" aria-label="Сортировка">
-                <option value="cheap">Сначала дешёвые</option>
+              <select class="select-control" aria-label="Сортировка.">
+                <option value="cheap">Сначала дешевые</option>
                 <option value="expensive">Сначала дорогие</option>
                 <option value="popular">Сначала популярные</option>
               </select>
@@ -294,7 +295,7 @@
             </li>
             <li class="pagination-item">
               <a class="pagination-link" href="#">
-                <span class="pagination-number">5</span>
+                <span class="pagination-number">10</span>
               </a>
             </li>
           </ul>
@@ -303,6 +304,7 @@
           <h2 class="subscribe-title black-text">Подпишитесь на&nbsp;рассылку</h2>
           <p class="subscribe-description  black-text">Только полезная информация и&nbsp;никакого спама,<br> честное бойскаутское!</p>
           <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+            <label class="visually-hidden" for="subscribe-field-email">Электронная почта.</label>
             <input class="subscribe-field" placeholder="Ваш e-mail" type="email" name="subscribe-field-email" id="subscribe-field-email">
             <button class="button-blue subscribe-button" type="submit">Подписаться</button>
           </form>
