--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Седона</title>
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
@@ -13,20 +14,20 @@
             <img class="page-header-logo" src="images/logo-sedona.svg" alt="Каньон с голубым небом и облаками." width="140" height="70">
           </a>
           <ul class="navigation-list reset-list">
-            <li class="navigation-item">
+            <li>
               <a class="navigation-link navigation-link-current" href="#">Главная</a>
             </li>
-            <li class="navigation-item">
+            <li>
               <a class="navigation-link" href="#">О седоне</a>
             </li>
-            <li class="navigation-item">
+            <li>
               <a class="navigation-link" href="catalog.html">Гостиницы</a>
             </li>
           </ul>
         </nav>
 
         <ul class="user-panel reset-list">
-          <li class="navigation-item">
+          <li>
             <a class="user-panel-link" href="#">
               <span class="visually-hidden">Поиск.</span>
               <svg aria-hidden="true" focusable="false" width="18" height="18" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -34,7 +35,7 @@
               </svg>
             </a>
           </li>
-          <li class="navigation-item">
+          <li>
             <a class="user-panel-link" href="#">
               <span class="visually-hidden">Избранное.</span>
               <svg aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -43,13 +44,13 @@
               <span class="counter">12</span>
             </a>
           </li>
-          <li class="navigation-item">
+          <li>
             <button class="button-brown navigation-button" type="button">Хочу сюда!</button>
           </li>
         </ul>
       </header>
 
-      <main class="main-container main-index">
+      <main class="main-container">
         <h1 class="visually-hidden">Седона.</h1>
 
         <section>
@@ -118,6 +119,7 @@
             <h2 class="subscribe-title">Подпишитесь на&nbsp;рассылку</h2>
             <p class="subscribe-description">Только полезная информация и&nbsp;никакого спама,<br> честное бойскаутское!</p>
             <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+              <label class="visually-hidden" for="subscribe-field-email">Электронная почта.</label>
               <input class="subscribe-field" placeholder="Ваш e-mail" type="email" name="subscribe-field-email" id="subscribe-field-email">
               <button class="button-blue subscribe-button" type="submit">Подписаться</button>
             </form>
