Добавляет размеры img в разметке

--- a/catalog.html
+++ b/catalog.html
@@ -204,7 +204,7 @@
           <ul class="hotels-list reset-list">
             <li class="hotels-card">
               <a class="hotels-link" href="#">
-                <img class="hotels-card-image" src="images/hotels/hotel-1.jpg" alt="Пещера с видом на изумительное звездное небо.">
+                <img class="hotels-card-image" src="images/hotels/hotel-1.jpg" width="300" height="212" alt="Пещера с видом на изумительное звездное небо.">
               </a>
               <a class="hotels-link" href="#">
                 <h3 class="hotels-card-title">Amara Resort &amp;&nbsp;Spa</h3>
@@ -220,7 +220,7 @@
             </li>
             <li class="hotels-card">
               <a class="hotels-link" href="#">
-                <img class="hotels-card-image" src="images/hotels/hotel-2.jpg" alt="Горы на фоне туч с просветами солнца и радугой.">
+                <img class="hotels-card-image" src="images/hotels/hotel-2.jpg"  width="300" height="212" alt="Горы на фоне туч с просветами солнца и радугой.">
               </a>
               <a class="hotels-link" href="#">
                 <h3 class="hotels-card-title">Villas at&nbsp;Poco Diablo</h3>
@@ -236,7 +236,7 @@
             </li>
             <li class="hotels-card">
               <a class="hotels-link" href="#">
-                <img class="hotels-card-image" src="images/hotels/hotel-3.jpg" alt="Горы с растительностью у подножья, голубым небом и ванильными облаками.">
+                <img class="hotels-card-image" src="images/hotels/hotel-3.jpg"  width="300" height="212" alt="Горы с растительностью у подножья, голубым небом и ванильными облаками.">
               </a>
               <a class="hotels-link" href="#">
                 <h3 class="hotels-card-title">Desert Quail Inn</h3>
@@ -252,7 +252,7 @@
             </li>
             <li class="hotels-card">
               <a class="hotels-link" href="#">
-                <img class="hotels-card-image" src="images/hotels/hotel-4.jpg" alt="Огненные горы на фоне ночного звёздного неба.">
+                <img class="hotels-card-image" src="images/hotels/hotel-4.jpg"  width="300" height="212" alt="Огненные горы на фоне ночного звёздного неба.">
               </a>
               <a class="hotels-link" href="#">
                 <h3 class="hotels-card-title">GreenTree Inn</h3>
